--- a/meme.html
+++ b/meme.html
@@ -6,7 +6,13 @@
 </head>
 <body>
 
-    <div class="pagewrapper">
+<preload><img src="wolf1.PNG" alt="background" class="image1"> </preload>
+<input type="text" type="hidden" class="text">
+
+
+
+
+    <!-- <div class="pagewrapper">
 
         <section class="left">
 
@@ -46,6 +52,6 @@
             <h3>February 14th, 2024</h3>
 		</div>
         <p class="something"> CEO Chief Alpha Vincent Vang</p>
-	</div>
+	</div> -->
 </body>
-</html>
+</html> 
